--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
   },
   "dependencies": {
     "gatsby": "^2.17.11",
+    "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-remove-trailing-slashes": "^2.1.15",
     "gatsby-theme-blog": "^1.1.17",
+    "gatsby-theme-notes": "^1.0.29",
     "react": "^16.11.0",
     "react-dom": "^16.11.0"
+  },
+  "devDependencies": {
+    "gatsby-plugin-typography": "^2.3.18",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   }
 }
