--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "gatsby build"
   },
   "dependencies": {
+    "@jlengstorf/get-share-image": "^0.5.0",
     "gatsby": "^2.17.11",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-theme-blog": "^1.1.17",
