--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@jlengstorf/get-share-image": "^0.8.0",
     "gatsby": "^2.32.13",
+    "gatsby-plugin-feed-mdx": "^1.1.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-theme-blog": "^2.1.0",
     "react": "^16.14.0",
