--- a/migration/package.json
+++ b/migration/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "esbuild": "^0.13.8",
+    "gray-matter": "^4.0.3",
+    "mdx-bundler": "^6.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
