--- a/migration/package.json
+++ b/migration/package.json
@@ -14,7 +14,8 @@
     "mdx-bundler": "^6.0.2",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark-mdx-images": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "8.0.0",
