--- a/migration/package.json
+++ b/migration/package.json
@@ -15,6 +15,7 @@
     "next": "12.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "rehype-img-size": "^0.0.1",
     "remark-mdx-images": "^1.0.3"
   },
   "devDependencies": {
