--- a/migration/package.json
+++ b/migration/package.json
@@ -13,6 +13,7 @@
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^6.0.2",
     "next": "12.0.1",
+    "prismjs": "^1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "rehype-img-size": "^0.0.1",
