--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"rehype-slug": "^5.1.0",
 		"remark-gemoji": "^7.0.1",
 		"remark-unwrap-images": "^3.0.1",
+		"remark-preview": "^1.0.2",
 		"remixicon": "^3.5.0",
 		"sass": "^1.62.1"
 	}
